[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "LeetCode code"
homepage = "https://github.com/SaitoTsutomu/leetcode"
license = "PSFL"
name = "leetcode"
readme = "README.md"
version = "0.0.1"

[tool.poetry.scripts]
leetcode = "leetcode:main"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.5.1"
fire = "^0.3.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
isort = "^5.1.4"
pytest = "^5.4.3"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
